Some changes to market list

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Este es el permiso para aparecer en buscadores-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Nombre de la página</title>
   </head>
 
@@ -26,24 +26,71 @@
           <ul>
             <li>Frutas</li>
             <ol>
-              <li> <a href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D" target="_blank" rel="noopener noreferrer">Manzana 🍎</a></li>
-              <li><a href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D" target="_blank" rel="noopener noreferrer">Platano  🍌</a></li>
+              <li>
+                <a
+                  class="element-list"
+                  href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Manzana 🍎</a
+                >
+              </li>
+              <li>
+                <a
+                  class="element-list"
+                  href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Platano 🍌</a
+                >
+              </li>
             </ol>
           </ul>
 
-           <ul>
+          <ul>
             <li>Carnes</li>
             <ol>
-              <li><a href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D" target="_blank" rel="noopener noreferrer">Pollo 🍗</a></li>
-              <li><a href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D" target="_blank" rel="noopener noreferrer">Carne Molida 🥩</a></li>
+              <li class="element-list">
+                <a
+                  href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Pollo 🍗</a
+                >
+              </li>
+              <li>
+                <a
+                  class="element-list"
+                  href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Carne Molida 🥩</a
+                >
+              </li>
             </ol>
           </ul>
 
-           <ul>
+          <ul>
             <li>Verduras</li>
             <ol>
-              <li><a href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D" target="_blank" rel="noopener noreferrer">Zanahoria 🥕</a></li>
-              <li><a href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D" target="_blank" rel="noopener noreferrer">Tomate 🍅</a></li>
+              <li>
+                <a
+                  class="element-list"
+                  href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Zanahoria 🥕</a
+                >
+              </li>
+              <li>
+                <a
+                  class="element-list"
+                  href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Tomate 🍅</a
+                >
+              </li>
             </ol>
           </ul>
           <p>Creado con amor</p>
