position and display classes

--- a/css/Medidas/medidas.html
+++ b/css/Medidas/medidas.html
@@ -19,5 +19,37 @@
     <section>
       <p class="rem">texto ejemplo para rem</p>
     </section>
+
+    <main>
+      <section class="section-m">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
+        tempora deleniti perferendis, quos facilis sunt ullam aliquam at
+        accusamus earum labore. Ipsa culpa distinctio modi sapiente voluptatem
+        esse nobis ratione. Impedit autem illo, doloremque necessitatibus
+        dolorum, natus voluptatibus cum eius ratione eum cumque. Dolor nulla,
+        blanditiis voluptate consequatur fugiat ex rem ab veniam cumque nostrum
+        placeat soluta est neque tenetur? Eaque perspiciatis amet consequuntur
+        corrupti atque, nulla voluptates dicta, suscipit at sapiente voluptatem
+        facere asperiores, aliquam esse numquam inventore enim obcaecati
+        mollitia nisi iste animi neque assumenda ipsum reiciendis? Ea.
+        Voluptatum aspernatur ullam doloribus nesciunt libero! Laboriosam
+        facilis sequi consequatur minus asperiores, dolorem error corporis
+        impedit porro officia, sint veniam itaque velit natus iure eum nobis
+        nulla ex ducimus voluptate. Eum asperiores tempora placeat soluta
+        temporibus esse ut blanditiis facilis, laboriosam ipsum quo tempore vero
+        optio dicta sunt modi quibusdam! Sunt vero, fugit unde perferendis
+        dolores quo quisquam et maxime. Veniam ut sequi distinctio, quo magnam
+        possimus ad fugit ullam nihil necessitatibus perferendis aperiam, fuga
+        laborum doloribus. Saepe, perspiciatis suscipit quia delectus nobis,
+        aliquam ducimus quas officiis magnam ut laudantium? Laboriosam, vero hic
+        quaerat unde maxime blanditiis aspernatur laborum iusto numquam labore,
+        et itaque perspiciatis voluptatum. Natus, recusandae? Iste qui a quia
+        sed illo debitis similique quaerat voluptas vel praesentium. Deserunt,
+        laudantium accusantium qui modi labore consequatur libero voluptatum
+        reiciendis dolore fugit temporibus dolorem facere ducimus tempora. Omnis
+        molestiae inventore unde recusandae earum eveniet? Officiis natus
+        tenetur quos nam impedit.
+      </section>
+    </main>
   </body>
 </html>
