--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   href="https://www.youtube.com/watch?v=-RLyiITf-E0&pp=ygUOcmVjZXRhIG1hbnphbmE%3D"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >Platano 🍌</a
+                  >Plátano 🍌</a
                 >
               </li>
             </ol>
