--- a/Practica-clone-google/index.html
+++ b/Practica-clone-google/index.html
@@ -10,12 +10,12 @@
   <body>
     <header>
       <nav>
-        <ul>
-          <li>Gmail<a href=""></a></li>
-          <li>Images<a href=""></a></li>
-          <li>
+        <ul class="nav-right-section">
+          <li><a href="">Gmail</a></li>
+          <li><a href="">Images</a></li>
+          <li >
             <a href="">
-              <svg
+              <svg class="lab-icon"
                 focusable="false"
                 height="24px"
                 viewBox="0 0 24 24"
@@ -29,9 +29,9 @@
                 ></path></svg
             ></a>
           </li>
-          <li>
+          <li >
             <a href=""
-              ><svg
+              ><svg class="menu-icon"
                 focusable="false"
                 height="24px"
                 width="24px"
@@ -50,15 +50,129 @@
                   https://lh3.googleusercontent.com/ogw/ANLem4a-nqHJlE1on6_FQsRWuM_78Sj4GkAPwIvVC2LuEj8=s32-c-mo 1x,
                   https://lh3.googleusercontent.com/ogw/ANLem4a-nqHJlE1on6_FQsRWuM_78Sj4GkAPwIvVC2LuEj8=s64-c-mo 2x
                 "
-                alt=""
+                alt="Juan Wilches"
                 aria-hidden="true"
-                
             /></a>
           </li>
         </ul>
       </nav>
     </header>
-    <main></main>
-    <footer></footer>
+
+    <main>
+      <section class="main-logo">
+        <img
+          src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+          alt=""
+        />
+      </section>
+
+      <section class="main-input">
+        <div class="main-input-container">
+          <span class="search-icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="14"
+              height="14"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M17.1527 15.0943H16.0686L15.6844 14.7238C17.0756 13.1102 17.8403 11.05 17.8388 8.91938C17.8388 7.1553 17.3157 5.43083 16.3356 3.96404C15.3555 2.49726 13.9625 1.35404 12.3327 0.678951C10.7029 0.00386463 8.90949 -0.172769 7.1793 0.171387C5.44911 0.515544 3.85983 1.36503 2.61243 2.61243C1.36503 3.85983 0.515544 5.44911 0.171387 7.1793C-0.172769 8.90949 0.00386463 10.7029 0.678951 12.3327C1.35404 13.9625 2.49726 15.3555 3.96404 16.3356C5.43083 17.3157 7.1553 17.8388 8.91938 17.8388C11.1286 17.8388 13.1595 17.0292 14.7238 15.6844L15.0943 16.0686V17.1527L21.9554 24L24 21.9554L17.1527 15.0943ZM8.91938 15.0943C5.50258 15.0943 2.74443 12.3362 2.74443 8.91938C2.74443 5.50258 5.50258 2.74443 8.91938 2.74443C12.3362 2.74443 15.0943 5.50258 15.0943 8.91938C15.0943 12.3362 12.3362 15.0943 8.91938 15.0943Z"
+                fill="#919191"
+              />
+            </svg>
+          </span>
+
+          <input type="text" name="" id="" />
+          <a class="micro-icon" href="">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="17"
+              height="20"
+              viewBox="0 0 17 24"
+              fill="none"
+            >
+              <path
+                d="M8.40005 15.6C10.392 15.6 12 14.028 12 12.036V3.612C12 1.62 10.392 0 8.40005 0C6.40805 0 4.80005 1.608 4.80005 3.612V12.036C4.80005 14.028 6.40805 15.6 8.40005 15.6Z"
+                fill="#4285F4"
+              />
+              <path
+                d="M7.19995 19.2961H9.59995V24.0001H7.19995V19.2961Z"
+                fill="#34A853"
+              />
+              <path
+                d="M2.46 17.844C0.936 16.248 0 14.448 0 12H2.4C2.4 13.74 3.072 14.904 4.164 16.056V16.44L2.784 17.856L2.46 17.844Z"
+                fill="#FBBC04"
+              />
+              <path
+                d="M8.39996 17.916C7.6106 17.9184 6.82864 17.7552 6.09943 17.4359C5.37023 17.1166 4.70827 16.6476 4.15196 16.056L2.45996 17.844C3.97196 19.452 6.08396 20.4 8.39996 20.4C13.044 20.4 16.788 16.896 16.788 12H14.4C14.4 15.504 11.712 17.916 8.39996 17.916Z"
+                fill="#EA4335"
+              />
+            </svg>
+          </a>
+
+          <a class="camera-icon" href="">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="18"
+              height="18"
+              viewBox="0 0 24 24"
+              fill="none"
+            >
+              <path
+                d="M20.0116 22.6667C21.4844 22.6667 22.6783 21.4728 22.6783 20C22.6783 18.5273 21.4844 17.3334 20.0116 17.3334C18.5389 17.3334 17.345 18.5273 17.345 20C17.345 21.4728 18.5389 22.6667 20.0116 22.6667Z"
+                fill="#34A853"
+              />
+              <path
+                d="M12.0117 17.3334C14.2209 17.3334 16.0117 15.5425 16.0117 13.3334C16.0117 11.1242 14.2209 9.33337 12.0117 9.33337C9.80258 9.33337 8.01172 11.1242 8.01172 13.3334C8.01172 15.5425 9.80258 17.3334 12.0117 17.3334Z"
+                fill="#4285F4"
+              />
+              <path
+                d="M0 18.5334C0 21.5517 2.44833 24 5.46667 24H12V21.3334L5.31667 21.3167C3.85 21.3167 2.66667 19.9517 2.66667 18.3334V15.3334H0V18.5334Z"
+                fill="#EA4335"
+              />
+              <path
+                d="M23.9999 8.13329C23.9999 5.11496 21.5516 2.66663 18.5333 2.66663H15.3333L18.6666 5.33329C20.1333 5.33329 21.3333 6.71496 21.3333 8.33329V13.3333H23.9999V8.13329Z"
+                fill="#FBBC04"
+              />
+              <path
+                d="M14.6667 0H9.33333L7.33333 2.66667H5.46667C2.44833 2.66667 0 5.115 0 8.13333V11.3333H2.66667V8.33333C2.66667 6.715 3.86667 5.33333 5.33333 5.33333H18.6667L14.6667 0Z"
+                fill="#4285F4"
+              />
+            </svg>
+          </a>
+        </div>
+      </section>
+
+      <section class="main-buttons">
+        <div><button type="button">Buscar con Google</button></div>
+        <div><button type="button">Me siento con suerte</button></div>
+      </section>
+
+      <section class="main-language">
+        <div class="language">
+          <p>Ofrecido por Google en:</p>
+        </div>
+        <div class="language">
+          <a href="http://" target="_blank" rel="noopener noreferrer"
+            >Español (Latinoamérica)</a
+          >
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <ul class="footer-left">
+        <li><a href="http://">About</a></li>
+        <li><a href="http://">Advertising</a></li>
+        <li><a href="http://">Business</a></li>
+        <li><a href="http://">How Search works</a></li>
+      </ul>
+      <ul class="footer-right">
+        <li><a href="http://">Privacy</a></li>
+        <li><a href="http://">Terms</a></li>
+        <li><a href="http://">Settings</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
